fixed mobile contact form spacing

--- a/styles.scss
+++ b/styles.scss
@@ -552,6 +552,7 @@ footer {
       .form-card {
         max-width: 400px;
         width: 85%;
+        height: 750px;
 
         input,
         textarea {
